// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css directive 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"element_26b\\"
}, create(\\"div\\", {}, \\"Hello\\"));

CSS.put(\`
	/* 1 */
	.element_26b { color: blue }
	/* 5 */
	.element_26b.is-red { color: red }
\`);"
`;

exports[`css directive 2`] = `
"() => <div className=\\"element_26b\\"><div>Hello</div></div>;

CSS.put(\`
	/* 1 */
	.element_26b { color: blue }
	/* 5 */
	.element_26b.is-red { color: red }
\`);"
`;

exports[`css multiple directives 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"element_26b\\"
}, create(\\"div\\", {}, \\"Hello\\"));

CSS.put(\`
	/* 1 */
	.element_26b { color: blue }
	/* 5 */
	.element_26b.is-red { color: red }
	.element_26b.is-green { color: green }
\`);"
`;

exports[`css multiple directives 2`] = `
"() => <div className=\\"element_26b\\"><div>Hello</div></div>;

CSS.put(\`
	/* 1 */
	.element_26b { color: blue }
	/* 5 */
	.element_26b.is-red { color: red }
	.element_26b.is-green { color: green }
\`);"
`;

exports[`pseudo before/after 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"element_26b\\"
}, create(\\"div\\", {}, \\"Hello\\"));

CSS.put(\`
	/* 6 */
	.element_26b::before { content: \\"This is content\\"; color: blue }
	.element_26b::after { background: red; color: white; content: \\"\\" }
\`);"
`;

exports[`pseudo before/after 2`] = `
"() => <div className=\\"element_26b\\"><div>Hello</div></div>;

CSS.put(\`
	/* 6 */
	.element_26b::before { content: \\"This is content\\"; color: blue }
	.element_26b::after { background: red; color: white; content: \\"\\" }
\`);"
`;

exports[`pseudo nthOfType 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"element_26b\\"
}, create(\\"div\\", {}, \\"Hello\\"));

CSS.put(\`
	/* 6 */
	.element_26b:nth-of-type(2n) { color: blue }
	.element_26b:nth-of-type(3n+2) { color: red }
\`);"
`;

exports[`pseudo nthOfType 2`] = `
"() => <div className=\\"element_26b\\"><div>Hello</div></div>;

CSS.put(\`
	/* 6 */
	.element_26b:nth-of-type(2n) { color: blue }
	.element_26b:nth-of-type(3n+2) { color: red }
\`);"
`;
